# dybtracer

./: README.md  meson.build
images/: earth2.png.txt
scripts/: bunny.lua  dybtracer.lua  dybtracernormal.lua  dybtracerrefmap.lua  earth.lua  graph.lua  graphanim.lua  refraction.lua  texturerepeat.lua
src/: camera.cpp  camera.hpp  filedialog.hpp  gtkfiledialog.cpp  gtkfiledialog.hpp  gui.hpp  intersection.hpp  light.cpp  light.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  object.hpp  objreader.cpp  objreader.hpp  pixelsurface.hpp  raytracingrenderer.cpp  raytracingrenderer.hpp  renderer.hpp  scene.cpp  scene.hpp  sdlgui.cpp  sdlgui.hpp  sdltexture.cpp  sdltexture.hpp  sphere.cpp  sphere.hpp  stlreader.cpp  stlreader.hpp  texture.hpp  tribox3.c  usbscancodes.hpp  wireframeelement.cpp  wireframeelement.hpp  wireframerenderer.cpp  wireframerenderer.hpp
